fix logo on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -436,7 +436,7 @@ body {
 }
 
 .home-logo {
-  max-width: 320px;
+  max-width: 220px;
   width: 100%;
   height: auto;
   margin-bottom: 12px;
